center align text, fix mouseover appearing in expanded view

--- a/public/css/festivalCard.css
+++ b/public/css/festivalCard.css
@@ -54,7 +54,7 @@
 .festival-card-image-text.expanded{
     height: 200px;
     background: rgba(0,0,0,0.7);
-
+    flex-flow: column;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     transition: all 0.5s;
@@ -62,6 +62,7 @@
 
 .festival-card-image-text.closed{
     height: 40px;
+    flex-flow: row;
     background: rgba(0,0,0,0.5);
     -webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
@@ -91,12 +92,16 @@
     /*color: white;*/
 }
 
-md-card-title {
-    margin-left: 16px;
-}
-
 .md-subheader.md-default-theme{
     background-color: rgba(255,255,255, 0);
+}
+
+.md-button.md-icon-button{
+    margin: 0;
+}
+
+md-card-title-text{
+    text-align: center;
 }
 
 md-card-actions{
